<resources>
    <string name="app_name">Win Rideshare Driver</string>
    <string name="welcom_btn">Empecemos</string>
    <string name="app_title">Win Rideshare Driver</string>
    <string name="toolbar_title">Win Rideshare Driver</string>
    <string name="login_email">Email Id</string>
    <string name="login_Password">Contraseña</string>
    <string name="login_btn">Inicia sesión</string>
    <string name="btn_accept">Acepta</string>
    <string name="btn_reject">Rechazar</string>
    <string name="login_errror">¡Has iniciado sesión en otro dispositivo!</string>
    <string name="txt_respod">Respondiendo...</string>
    <string name="forgot_pass_btn">¿Se te olvidó tu contraseña?</string>
    <string name="new_user_btn">¿Nueva conductora/o?</string>
    <string name="req_pass_btn">Solicitud de contraseña</string>
    <string name="register_btn">Registrar</string>
    <string name="forgot_txt_note">Por favor, introduzca la identificación de correo electrónico para recibir la contraseña</string>
    <string name="identificacion">Ingrese su DNI</string>
    <string name="first_name">Ingrese sus Nombres</string>
    <string name="last_Name">Ingrese sus Apellidos</string>
    <string name="et_register_username">Ingrese su Usuario</string>
    <string name="user_referral_code">Ingrese su Sponsor/Referido</string>
    <string name="your_password">Tu contraseña</string>
    <string name="your_email">Tu correo electrónico</string>
    <string name="phn_no">Número de teléfono</string>
    <string name="txt_select_country">Seleccionar país</string>
    <string name="txt_select_currency">Seleccione el tipo de moneda</string>
    <string name="login_cancelled">inicio de sesión cancelado</string>
    <string name="login_failed">error de inicio de sesion</string>
    <string name="btn_edit">EDITAR</string>
    <string name="btn_save">GUARDAR</string>
    <string name="panicClic">Estas en peligro? Manten presionado el botón por 3 segundos y te ayudaremos!</string>
    <string name="save_contact">Guardar contacto</string>
    <string name="number_panic_contact">Número de contacto</string>
    <string name="panic_contact">Contacto de pánico</string>
    <string name="txt_current_loc">Ubicación actual</string>
    <string name="txt_drop_loc">Lugar de llegada</string>
    <string name="txt_types_title">Autos Disponibles</string>
    <string name="txt_types_payment">Efectivo</string>
    <string name="invoice">FACTURA</string>
    <string name="total_fare">TARIFA ESTIMADA</string>
    <string name="trip_summary">RESUMEN DEL VIAJE</string>
    <string name="rate_ride">Calificar al cliente</string>
    <string name="referral_title">Refiere y gana</string>
    <string name="txt_male">Masculino</string>
   <string name="activame">Validar Correo</string>
    <string name="email_cant_be_empty1">Email ya actualizado ingresar con sus datos desde el loguin</string>
    <string name="txt_email_error1">Correo ya actualizado, porfavor comunicarse con su lider </string>
    <string name="txt_male_rb">male</string>
    <string name="txt_female">Femenino</string>
    <string name="txt_female_rb">female</string>
 <string name="sign_up1">Generar Código</string>
 <string name="validar">Validar Correo</string>
 <string name="registro">Nuevo Registro</string>
 <string name="reactivate">Reactivate a un solo clic</string>
 <string name="actualiza">Actualiza tus Datos con un clic</string>
 <string name="generar">Verificar y Generar el Correo</string>
 <string name="valcor">Valida y Verifica tu correo</string>
 <string name="correo">Verificar y Generar el Correo</string>
 <string name="imprimir">Validar y guardar la Información</string>
    <string name="copiedCode">Código ha sido copiado al portapapeles</string>
    <string name="facebook_messager">Por favor instale Facebook Messenger</string>
    <string name="txt_mobile_error">Por favor, introduzca el número de móvil!</string>
    <string name="txt_fname_error">Por favor, introduzca el nombre!</string>
    <string name="txt_lname_error">Por favor, introduzca el apellido!</string>
    <string name="txt_incorrect_error">Identificación de correo electrónico incorrecta</string>
    <string name="txt_picture_error">Por favor, elija foto de perfil!</string>
    <string name="txt_phone_error">Por favor, introduzca el número de teléfono!</string>
    <string name="txt_pass8_error">¡La contraseña debe tener al menos 8 caracteres!</string>
    <string name="txt_referral_earn">Tu ganancia por referir</string>
    <string name="txt_email_error">Por favor, introduzca el ID de correo electrónico!</string>
    <string name="txt_pass_error">Por favor, introduzca la contraseña!</string>
    <string name="txt_load">Cargando…</string>
    <string name="txt_confirm">Confirmando...</string>
    <string name="txt_signin">Iniciar sesión...</string>
    <string name="reg_load">Registrando...</string>
    <string name="updating_pro_load">Actualizando Perfil...</string>
    <string name="req_pass_load">Recuperando Contraseña...</string>
    <string name="change_availability">Cambiar Estatus</string>
    <string name="setting">¿Listo para conducir?</string>
    <string name="doc">Sube tus documentos</string>
    <string name="help_line">En caso de emergencia</string>
    <string name="txt_refferal_link">Compartir tu código de referido</string>
    <string name="my_home">Principal</string>
    <string name="my_payment">Agregar Pago</string>
    <string name="my_free_ride">Viajes gratuitos</string>
    <string name="ride_history">Historial de viaje</string>
    <string name="my_promo">Promociones</string>
    <string name="my_help">Subida de Documentos</string>
    <string name="txt_logout">Cerrar sesión</string>
    <string name="planillaViaje">Planilla de Viajes</string>
    <string name="listaplanillaViaje">Lista de Planillas</string>
    <string name="drawer_open">abrir</string>
    <string name="drawer_close">cerrar</string>
    <string name="txt_yes">Si</string>
    <string name="txt_no">No</string>
    <string name="logout_text">¿Estás seguro que deseas cerrar sesión?</string>
    <string name="update_success_text">Perfil actualizado correctamente</string>
    <string name="facebook_api_id">1728426610810179</string>
    <string name="sender_id">621670998256</string>
    <string name="googleApp_id">621670998256</string>
    <string name="map_key">AIzaSyBC_Ff-gjCriYGBVzZ6BMpJzTO1Hk7uMaY</string>
    <string name="txt_slct_option">Cambiar la Foto</string>
    <string name="txt_gellery">Galería</string>
    <string name="txt_cameray">Cámara</string>
    <string name="txt_img_error">¡No se puede seleccionar la imagen!</string>
    <string name="txt_current_location">\u25A0  ¿A dónde desea ir?</string>
    <string name="txt_trip_id">Trip_id</string>
    <string name="txt_symbol_dot">\u25CF</string>
    <string name="txt_symbol_square">\u25A0</string>
    <string name="txt_dest_hint">¿A dónde desea ir?</string>
    <string name="txt_req_cab">Solicitar Taxi</string>
    <string name="txt_success_forgot_password">La contraseña fue enviada exitosamente al email registrado </string>
    <string name="status_1">Aceptar el Doctor</string>
    <string name="status_2">Partio el Doctor</string>
    <string name="status_3">Arribo el Doctor</string>
    <string name="status_4">Comenzar tratamiento</string>
    <string name="status_5">Terminar Tratamiento</string>
    <string name="history_title">Historial de viajes</string>
    <string name="txt_warning">( Discapacitada para evitar el vandalismo de demostración. )</string>
    <string name="btn_status_txt_1">Toque cuando partió</string>
    <string name="btn_status_txt_2">Llegó al lugar de los clientes</string>
    <string name="btn_status_txt_3">Toque para iniciar viaje</string>
    <string name="btn_status_txt_4">Toca para finalizar el viaje</string>
    <string name="txt_pickup_address">Dirección de entrega</string>
    <string name="give_rating">Por favor, dar calificación a la usuario</string>
    <string name="rated_successfully">Usuario calificado exitosamente</string>
    <string name="drop_address">Dirección de llegada</string>
    <string name="txt_drop_address">Eliminar Dirección</string>
    <string name="dialog_exit_text">Esta seguro?</string>
    <string name="dialog_exit_caps">SALIR</string>
    <string name="txt_gps_off">GPS esta apagado!</string>
    <string name="txt_gps_msg">Por favor encender el GPS</string>
    <string name="txt_enable">Habilitar</string>
    <string name="txt_exit">Salir</string>
    <string name="dialog_no_internet">Sin Internet</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="no_internet">Internet no disponible</string>
    <string name="dialog_no_inter_message">Porfavor activa la conexión de internet.</string>
    <string name="dialog_enable_3g">Configurar 3g</string>
    <string name="dialog_enable_wifi">Configurar WIFI</string>
    <string name="dialog_exit">Salir</string>
    <string name="txt_note_choose">Esta característica es <b>Disabled</b> in <b>VERSION 1.0.0</b>, para evitar el vandalismo de la demostración</string>
    <string name="note_availbility">Use el botón presente arriba para alternar entre "Disponible" y amp; "No disponible, es decir. Si desea tomar un descanso, puede desactivar su disponibilidad.</string>
    <string name="doc_title">Actualizando tus Documentos</string>
    <string name="txt_no_history">--- No hay viajes en su cuenta ---</string>
    <string name="txt_availabilty">No conduzco ahora / Estoy disponible ahora</string>
    <string name="txt_avaialble_note1">Que es esto?</string>
    <string name="txt_driver">Conductor</string>
    <string name="title_messenger">Mensajes</string>
    <string name="txt_type_msg">Tipos de Mensajes</string>
    <string name="pic_worn">Puede elegir la imagen de la Galería -o-- Use la cámara para crear una.</string>
    <string name="txt_note">Nota: </string>
    <string name="txt_ok">Ok</string>
    <string name="txt_payment_type">Tipo de pago:</string>
    <string name="txt_no_tolls">No. Peajes:</string>
    <string name="txt_submit">Enviar</string>
    <string name="txt_not_avialbel">--No disponible --</string>
    <string name="txt_your_tripwith">tu viaje con </string>
    <string name="txt_receipt">Recibo</string>
    <string name="base_fare">Tarifa base</string>
    <string name="min_fare">Min. tarifa</string>
    <string name="time_cost">Costo de tiempo</string>
    <string name="distance">Distancia</string>
    <string name="booking_price">Precio de reserva</string>
    <string name="service_tax">Servicio de taxi</string>
    <string name="password">Contraseña</string>
    <string name="availability_text">En línea es cuando está disponible para tomar solicitudes. Sin conexión es cuando tomas un descanso. Puede cambiar su estado a DISPONIBLE "</string>
    <string name="email_address">Dirección de Email</string>
    <string name="welcome_back">Bienvenido</string>
    <string name="login_if_you_are_an_existing_user_of_nikola">Inicia sesión, si eres una usuario existente de la oficina virtual</string>
    <string name="do_not_have_an_account_signup">¿No tiene una cuenta? Regístrate </string>
    <string name="or_signin_using_any_of_your_social_account">O inicie sesión con cualquiera de sus cuentas sociales.</string>
    <string name="login">Iniciar sesión</string>
    <string name="forgot_password">Olvido su Contraseña</string>
    <string name="signup4">REGISTRATE O REACTIVATE</string>
    <string name="go_online">En línea</string>
    <string name="others">Otros</string>
    <string name="availability">Disponibilidad</string>
    <string name="recargarSaldo">Recargar Saldo</string>
    <string name="cantidadRecarga">Cantidad a recargar </string>
    <string name="recargar">Recargar</string>
    <string name="numTransferencia">Num Transferencia Bancaria</string>
    <string name="fechaTransferencia">Fecha de la Transferencia Bancaria</string>
</resources>