<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/base">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:background="@drawable/ic_launcher_col" />

        <com.nikola.driver.utils.customText.CustomBoldRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:text="@string/welcome_back"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp" />

        <com.nikola.driver.utils.customText.CustomRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/login_if_you_are_an_existing_user_of_nikola"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

        <com.nikola.driver.utils.customText.CustomRegularEditView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="70dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/destination_edit_back"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="20dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:paddingRight="10dp"
            android:paddingBottom="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/bt_light_gray" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/bt_light_gray">

            <com.nikola.driver.utils.customText.CustomRegularEditView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/destination_edit_back"
                android:drawableStart="@drawable/ic_lock_open_black_24dp"
                android:drawablePadding="20dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingRight="10dp"
                android:paddingBottom="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/bt_light_gray" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.nikola.driver.utils.customText.CustomRegularTextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/forgot_password"
            android:textSize="16sp" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:paddingLeft="50dp"
            android:paddingTop="10dp"
            android:background="@drawable/drawable_edittext_background3"
            android:paddingRight="50dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="14sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/Actualizate"
                android:layout_width="198dp"
                android:layout_height="48dp"
                android:layout_gravity="left"
                android:background="@drawable/drawable_edittext_background2"
                android:paddingLeft="10dp"
                android:paddingRight="30dp"
                android:text="@string/signup4"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:visibility="visible" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1"/>

        <com.nikola.driver.utils.customText.CustomRegularTextView
            android:id="@+id/socialLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/or_signin_using_any_of_your_social_account"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:visibility="gone" />

        <com.nikola.driver.utils.customText.CustomRegularTextView
            android:id="@+id/signUp"
            android:layout_width="243dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:onClick="onViewClicked"
            android:text="@string/do_not_have_an_account_signup"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:visibility="invisible" />
    </LinearLayout>

</ScrollView>