<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nikola.driver.ui.activity.RegistrarRecargaActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_history"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@drawable/background_with_shadow">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/registrar_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:padding="5dp"
                app:srcCompat="@drawable/back" />

            <com.nikola.driver.utils.customText.CustomBoldRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="end"
                android:paddingRight="10dp"
                android:text="@string/recargarSaldo"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.nikola.driver.utils.customText.CustomRegularEditView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cantidadRecarga"
            android:background="@drawable/drawable_edittext_background"
            android:textColor="@color/black"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp"
            android:id="@+id/montoRecarga"
            android:drawableLeft="@drawable/number_plate"
            android:paddingBottom="15dp"
            android:drawablePadding="20dp"
            android:inputType="number"
            android:digits="1234567890"
            android:layout_marginRight="20dp"
            android:textColorHint="@color/bt_light_gray"/>
        <com.nikola.driver.utils.customText.CustomRegularEditView
            android:id="@+id/numTransferenciaRecarga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numTransferencia"
            android:background="@drawable/drawable_edittext_background"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp"
            android:drawableLeft="@drawable/ic_banktransfer"
            android:paddingBottom="15dp"
            android:drawablePadding="20dp"
            android:inputType="number"
            android:layout_marginRight="20dp"
            android:textColorHint="@color/bt_light_gray"/>

        <com.nikola.driver.utils.customText.CustomRegularEditView
            android:id="@+id/fechaTransferencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fechaTransferencia"
            android:background="@drawable/drawable_edittext_background"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp"
            android:drawableLeft="@drawable/calendar_clock"
            android:paddingBottom="15dp"
            android:drawablePadding="20dp"
            android:inputType="number"
            android:layout_marginRight="20dp"
            android:textColorHint="@color/bt_light_gray"/>

        <Button
            android:id="@+id/recargar"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="#003E6A"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/recargar"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>