<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/actionbar_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/toolbar_profile"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@drawable/background_with_shadow">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/profile_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:padding="10dp"
                    app:srcCompat="@drawable/back" />

                <com.nikola.driver.utils.customText.CustomBoldRegularTextView
                    android:id="@+id/btn_edit_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:gravity="end"
                    android:paddingRight="10dp"
                    android:text="@string/btn_edit"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/profile_img_lay"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_below="@+id/actionbar_lay"
        android:background="@color/main_color">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:scaleType="centerCrop"
            android:src="@drawable/defult_user" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lay_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_img_lay"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="horizontal"
        android:padding="8dp">

        <com.nikola.driver.utils.customText.CustomBoldEditView
            android:id="@+id/et_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/first_name"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <com.nikola.driver.utils.customText.CustomBoldEditView
            android:id="@+id/et_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/last_Name"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </LinearLayout>

    <com.nikola.driver.utils.customText.CustomBoldEditView
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lay_name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/square_editbox"
        android:hint="@string/first_name"
        android:padding="10dp"
        android:singleLine="true"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <com.nikola.driver.utils.customText.CustomBoldEditView
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etFirstName"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/square_editbox"
        android:hint="@string/last_Name"
        android:padding="10dp"
        android:singleLine="true"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <com.nikola.driver.utils.customText.CustomBoldEditView
        android:id="@+id/et_profile_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etLastName"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/square_editbox"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="15sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_profile_email"
        android:id="@+id/layout"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="17dp">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:visibility="invisible" />

    <com.nikola.driver.utils.customText.CustomBoldEditView
        android:id="@+id/et_profile_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:background="@drawable/square_editbox"
        android:hint="@string/phn_no"
        android:inputType="phone"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="15sp" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/profile_radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:buttonTint="@color/com_facebook_button_background_color_pressed"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_btn_male"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:buttonTint="@color/com_facebook_button_background_color_pressed"
            android:checked="true"
            android:text="@string/txt_male"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/radio_btn_female"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:buttonTint="@color/com_facebook_button_background_color"
            android:text="@string/txt_female"
            android:textSize="14sp" />


        <RadioButton
            android:id="@+id/radio_btn_others"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:buttonTint="@color/com_facebook_button_background_color_pressed"
            android:text="@string/others"
            android:textSize="14sp" />

    </RadioGroup>


</RelativeLayout>