<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_status_availability"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.activity.StatusAvailabilityActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/toolBar">

            <ImageView
                android:layout_width="wrap_content"
                android:id="@+id/back"
                android:layout_height="wrap_content"
                android:background="@drawable/back"/>

            <com.nikola.driver.utils.customText.CustomRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:layout_marginLeft="30dp"
                android:text="@string/availability"
                android:textSize="18sp"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/availableImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/online_taxi_colombia"
        android:scaleType="fitXY" />

    <com.nikola.driver.utils.customText.CustomRegularTextView
        android:id="@+id/statusChangeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="80sp"
        android:layout_marginRight="10dp"
        android:background="@color/green"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/go_online"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <com.nikola.driver.utils.customText.CustomRegularTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:text="@string/availability_text"/>


</LinearLayout>
